tests/NormalTests/paczka1/small_fuzzy/91679703.err
Error in line 3: S785 A248 54,6
Error in line 4: WJyezU S785 81,5
Error in line 9: WJyezU S905 67,2
